mlflow/overlays/test/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-minio
  labels:
    app: mlflow
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mlflow-minio
            port:
              number: 9001
    host: mlflow-minio.localhost
  tls:
  - hosts:
    - mlflow-minio.localhost
    secretName: mlflow-minio-selfsigned-cert
